--- a/packages/trace-viewer/index.html
+++ b/packages/trace-viewer/index.html
@@ -26,5 +26,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <dialog id="fallback-error" open="false">
+      <p>The Playwright Trace Viewer must be loaded over the <code>http://</code> or <code>https://</code> protocols.</p>
+    </dialog>
+    <script>
+      if (!/^https?:/.test(window.location.protocol))
+        document.getElementById("fallback-error").open = "true";
+    </script>
   </body>
 </html>
