--- a/packages/trace-viewer/index.html
+++ b/packages/trace-viewer/index.html
@@ -26,12 +26,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
-    <dialog id="fallback-error" open="false">
+    <dialog id="fallback-error">
       <p>The Playwright Trace Viewer must be loaded over the <code>http://</code> or <code>https://</code> protocols.</p>
     </dialog>
     <script>
       if (!/^https?:/.test(window.location.protocol))
-        document.getElementById("fallback-error").open = "true";
+        document.getElementById("fallback-error").show();
     </script>
   </body>
 </html>
