add link to docs

--- a/packages/trace-viewer/index.html
+++ b/packages/trace-viewer/index.html
@@ -28,6 +28,7 @@
     <script type="module" src="/src/index.tsx"></script>
     <dialog id="fallback-error">
       <p>The Playwright Trace Viewer must be loaded over the <code>http://</code> or <code>https://</code> protocols.</p>
+      <p>For more information, please see the <a href="https://aka.ms/playwright/err-trace-viewer-file-protocol">docs</a>.</p>
     </dialog>
     <script>
       if (!/^https?:/.test(window.location.protocol))
