--- a/packages/html-reporter/index.html
+++ b/packages/html-reporter/index.html
@@ -20,7 +20,8 @@
     <meta charset='UTF-8'>
     <meta name='color-scheme' content='dark light'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Playwright Test Report</title>
+    <title>Playwright Test Report | Summary</title>
+    <link rel="icon" href="/logo_default.svg">
   </head>
   <body>
     <div id='root'></div>
